fixed details z-index

--- a/src/styles/modules/detail.less
+++ b/src/styles/modules/detail.less
@@ -5,6 +5,7 @@
 .detail {
     padding-bottom: 134px;
     position: relative;
+    z-index: @detail-z-index;
 
     .at-xlarge({
         //padding-bottom: 275px;
