--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -27,7 +27,8 @@
    ========================================================================== */
 @header-z-index:            1000;
 @modal-z-index:             1010;
-@experience-z-index:        990;
+@detail-z-index:            990;
+@experience-z-index:        900;
 
 
 /* Scaffolding
